Fix url wrap issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 * {
   font-family: 'Josefin Sans', sans-serif;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
+
 
 a {
   color:black;
@@ -261,7 +264,8 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
+  padding-left: 20px;
 }
 
 .PostDetail h1 {
@@ -354,7 +358,8 @@ input {
   font-style: italic;
   color: darkblue;
   text-decoration: underline;
-  width: 90%;
+  width: 100%;
+  word-wrap:break-word;
 }
 
 .pointerMouse{
@@ -464,7 +469,7 @@ input {
   }
 
   input {
-    font-size: .7rem;
+    font-size: .9rem;
     margin-bottom: 5px;
     margin-left: 1px;
   }
